# jet-cli

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/: CODEOWNERS
.github/resources/: solana-config.yaml
.github/workflows/: release.yaml  test.yaml
docs/: _sidebar.md  index.html  package-lock.json  package.json
docs/commands/: README.md
scripts/: test-bootstrap.sh  validator.sh
src/: accounts.rs  config.rs  lib.rs  macros.rs  program.rs  pubkey.rs  staking.rs  terminal.rs
src/cmd/: airdrop.rs  auth.rs  bonds.rs  margin.rs  margin_pool.rs  mod.rs  rewards.rs  staking.rs
