[package]
name = "jet-cli"
version = "0.1.8"
description = "Jet Protocol command line tool for program requests"
edition = "2021"
repository = "https://github.com/jet-lab/jet-cli"
readme = "https://github.com/jet-lab/jet-cli#readme"
license = "AGPL-3.0-or-later"

[[bin]]
name = "jet"
path = "src/bin/main.rs"

[features]
default = []

[profile.release]
opt-level = "s"

[dependencies]
anchor-client = { git = "https://github.com/jet-lab/anchor", branch = "master" }
anchor-spl = { git = "https://github.com/jet-lab/anchor", branch = "master" }
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
dialoguer = "0.10"
indicatif = "0.16"
jet-proto-auth = { git = "https://github.com/jet-lab/jet-governance", branch = "master", features = ["cli"] }
jet-bonds = { path = "./bonded-osprey/programs/bonds", features = ["cli"] }
jet-margin = { git = "https://github.com/jet-lab/jet-v2", branch = "master", features = ["cli"] }
jet-margin-pool = { git = "https://github.com/jet-lab/jet-v2", branch = "master", features = ["cli"] }
jet-metadata = { git = "https://github.com/jet-lab/jet-v2", branch = "master", features = ["no-entrypoint"] }
jet-proto-rewards = { git = "https://github.com/jet-lab/jet-governance", branch = "master", features = ["cli"] }
jet-proto-staking = { git = "https://github.com/jet-lab/jet-governance", branch = "master", features = ["cli"] }
serde = "1.0"
serde_json = "1.0"
shellexpand = "2.1"
solana-cli-config = "1.9"

[dev-dependencies]
serde_test = "1.0"
